# migrations

./: .env.example  LICENSE  code_quality_check.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 2025-02-14_22-19_affa177c5690.py
src/: settings.py
src/models/: __init__.py  user.py
