[project]
name = "vkgifsmigrations"
version = "0.1.0"
description = "This is all migrations for vkgifsbot idea"
authors = [
    {name = "yepIwt",email = "ReetRay@protonmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.code-quality.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"
pylint = "^3.3.4"
flake8-pyproject = "^1.2.3"

[tool.flake8]
ignore = "W503"
max-line-length = 120
per-file-ignores = [
    "__init__.py:F401",
]
exclude = [
    "local/",
    "logs/",
    "cache/*",
    "!cache/.gitkeep",
    "db.sqlite3",
    "__pycache__/",
    "*.py[cod]",
    "*$py.class",
    ".pytest_cache/",
    ".Python",
    "env/",
    ".env/",
    "build/",
    "develop-eggs/",
    "dist/",
    "downloads/",
    "eggs/",
    ".eggs/",
    "lib/",
    "lib64/",
    "parts/",
    "sdist/",
    "var/",
    "wheels/",
    "*.egg-info/",
    ".installed.cfg",
    "*.egg",
    ".env",
    ".autoenv*.zsh",
    ".venv*",
    "venv*",
    "ENV/",
    ".idea/",
    "*.iml",
    ".vscode/",
    ".DS_Store",
    "*.entry.js",
    "node_modules",
    "stats.json",
    "npm-debug.log*",
    "derby.log",
    "metastore_db"
]

[tool.mypy]
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
pretty = true
show_error_codes = true

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "protected-access",  # Allow protected access in tests
    "missing-module-docstring",  # Optional for test files
    "redefined-outer-name",  # Allow fixture usage in tests
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "broad-exception-caught"
]


